--- a/CareAmarillo/FormUniSearch.resx
+++ b/CareAmarillo/FormUniSearch.resx
@@ -4312,6 +4312,9 @@
         QmCC
 </value>
   </data>
+  <data name="richTextBox1.Text" xml:space="preserve">
+    <value>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dui sem, ultrices eget augue eu, rutrum aliquet turpis. Nullam sit amet ipsum libero. Integer ligula odio, ornare lacinia interdum nec, faucibus non risus. Vivamus mattis pretium nisl, in feugiat nisl dictum ut. Suspendisse quis arcu ligula. Aliquam pretium quis nulla a ultricies.</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAMAEBAAAAEAIABoBAAANgAAACAgAAABACAAqBAAAJ4EAAAwMAAAAQAgAKglAABGFQAAKAAAABAA
